<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingEnd="20dp"
    android:paddingStart="15dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/select_priority"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <RadioButton
            android:id="@+id/rbHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/radioPadding"
            android:buttonTint="#B3B3B3"/>
        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/radioPadding"
            android:buttonTint="#B3B3B3"/>
        <RadioButton
            android:id="@+id/rbNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/radioPadding"
            android:buttonTint="#B3B3B3"/>

    </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearRight"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/radioPadding"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLeft"
        >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/color_red"
            app:cardCornerRadius="8dp"
            android:padding="20dp"
            app:contentPadding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/high"

                android:textColor="@color/white"
                android:textSize="17sp" />
        </com.google.android.material.card.MaterialCardView>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/color_orange"
            app:cardCornerRadius="8dp"
            app:contentPadding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/medium"
            android:textColor="@color/white"
            android:textSize="17sp" />
        </com.google.android.material.card.MaterialCardView>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/radioPadding"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/color_green"
            app:cardCornerRadius="8dp"
            app:contentPadding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/normal"
                android:textColor="@color/white"
                android:textSize="17sp"
                />
        </com.google.android.material.card.MaterialCardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>
    <TextView
        android:id="@+id/btnSavePriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLeft" />


    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/cancel"
        android:textColor="@color/color_gray"
        android:textSize="18sp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSavePriority"
        app:layout_constraintEnd_toStartOf="@+id/btnSavePriority"
        app:layout_constraintTop_toTopOf="@+id/btnSavePriority" />

</androidx.constraintlayout.widget.ConstraintLayout>