<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_Note"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:contentPadding="10dp"
    android:clickable="true"
    app:cardCornerRadius="@dimen/radio_card"
    app:cardBackgroundColor="@color/ColorLightBlack"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/priorityView"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="7dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="@color/color_green"
            card_view:layout_constraintEnd_toStartOf="@+id/delete_button"
            card_view:layout_constraintTop_toTopOf="parent"
            />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/title_view"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/priorityView"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:maxLines="3"
            android:fontFamily="@font/montserrat_medium"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_delete"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/date_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date_view"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:maxLines="1"
            android:fontFamily="@font/montserrat_medium"
            android:textStyle="italic"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDesc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>