<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".navigation.ui.add.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_arrow"
                    android:layout_height="@dimen/buttonBack_100sp"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/note"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnBack"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnSave"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:clickable="true"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_check" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/date_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar_constraintLayout">

        <TextView
            android:id="@+id/txt_priority"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Priority |"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPriority"
            android:layout_width="12dp"
            android:layout_height="12dp"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="@dimen/view_priority"
            app:cardBackgroundColor="@color/color_red"
            app:layout_constraintStart_toEndOf="@id/txt_priority"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:isScrollContainer="false"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/date_view"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/edit_20sp"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_layout_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                app:hintEnabled="false"
                app:boxStrokeColor="@color/transparent"
                app:boxBackgroundColor="@color/transparent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:textSize="25sp"
                    android:padding="0dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/white"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:textColorHint="@color/white"
                    android:hint="@string/title_txt"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                app:hintEnabled="false"
                app:boxStrokeColor="@color/transparent"
                app:boxBackgroundColor="@color/transparent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_layout_title">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_edit"
                    android:layout_width="match_parent"
                    android:gravity="top"
                    android:textSize="18sp"
                    android:padding="0dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/white"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:minLines="10"
                    android:textColorHint="@color/white"
                    android:hint="@string/description_txt"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>